Flush network_service_instance after simulating crash

Make sure 'network_service_instance.cc::g_network_service' receives
error notification by flushing its InterfacePtr.

Related tests were potentially flaky but only observed on Mac bot.

Bug: 793296
Change-Id: Ia2e3a3bcc0b2bed28b86d2b119c0fd42df939112
Reviewed-on: https://chromium-review.googlesource.com/817642
Reviewed-by: Yuzhu Shen <yzshen@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Commit-Queue: Chong Zhang <chongz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523006}
Former-commit-id: e0dfdb630ff40fb25ba2a117c7ec07d425de7350