content/public/browser/network_service_instance.h
@@ -18,6 +18,11 @@ class NetworkService;
 // service is disabled.
 CONTENT_EXPORT mojom::NetworkService* GetNetworkService();
 
+// Call |FlushForTesting()| on cached |NetworkServicePtr|. For testing only.
+// Must only be called on the UI thread. Must not be called if the network
+// service is disabled.
+CONTENT_EXPORT void FlushNetworkServiceInstanceForTesting();
+
 }  // namespace content
 
 #endif  // CONTENT_PUBLIC_BROWSER_NETWORK_SERVICE_INSTANCE_H_
